--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,11 +1,27 @@
 //* PORTFOLIO PAGE STYLING */
 //* Filter style */
+  .filters {
+    background-color: $additional-color;
+    padding-bottom: 40px;
+    
+    @media screen and (min-width: 767px) {
+    padding-bottom: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+    padding-bottom: 50px;
+    }
+  }
   .filter-list {
     display: flex;
     justify-content: center;
     padding: 0;
     padding-inline-start: 0;
-    margin-bottom: 50px;
+
+    @media screen and (max-width: 767px){
+      flex-grow: 3;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+    }
   }
   .filter-list__item {
     margin-right: 8px;
@@ -24,6 +40,13 @@
 
     &:last-child {
       margin-right: 0;
+    }
+    @media screen and (max-width: 767px) {
+      margin-bottom: 15px;
+      
+      &:nth-last-child(-n+2) {
+        margin-bottom: 0;
+      }
     }
   }
   .filter-list__button {
@@ -59,28 +82,49 @@
   }
   
   //* Projects style */
+  .projects {
+    background-color: $additional-color;
+    padding-top: 0;  
+  }
   .project-list {
     display: flex;
     flex-wrap: wrap;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  
     padding-inline-start: 0;
   }
   .project-list__item {
-    display: block;
-    width: calc((100% - 60px) / 3);
     margin-right: 30px;
     margin-bottom: 30px;
   
-    box-sizing: border-box;
-
-    &:nth-child(3n) {
-      margin-right: 0px;
+    @media screen and (max-width: 767px) {
+      width: 100%;
+    
+      &:nth-child(n) {
+        margin-right: 0px;
+      }
+      &:nth-last-child(-n+1) {
+        margin-bottom: 0;
+      }
     }
-    &:nth-last-child(-n + 3) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: calc((100% - 30px) / 2);
+    
+      &:nth-child(2n) {
+        margin-right: 0px;
+      }
+      &:nth-last-child(-n+2) {
+        margin-bottom: 0;
+      }
+    }
+    @media screen and (min-width: 1200px) {
+      width: calc((100% - 60px) / 3);
+      margin-bottom: 0;
+    
+      &:nth-child(3n) {
+      margin-right: 0px;
+      }
+      &:nth-last-child(-n + 3) {
       margin-bottom: 0px;
+      }
     }
   }
   
@@ -93,10 +137,10 @@
     transition-property: box-shadow;
     @include trans-func(250ms);
 
-   &:hover, &:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    &:hover, &:focus {
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
+    }
   }
   
   .project-list__overlay {
@@ -113,16 +157,26 @@
     left: 0;
     transform: translateY(100%);
   
-    padding-top: 63px;
+    padding-top: 77px;
     padding-right: 24px;
-    padding-bottom: 63px;
+    padding-bottom: 77px;
     padding-left: 24px;
+
+    @media screen and (min-width: 767px) {
+      padding-top: 49px;
+      padding-bottom: 49px;
+    }
+    @media screen and (min-width: 1200px) {
+      padding-top: 63px;
+      padding-bottom: 63px;
+    }
   
     font-family: $main-font, sans-serif;
     font-weight: 400;
     font-size: 18px;
     line-height: 1.56;
     letter-spacing: 0.03em;
+
   
     color: $additional-color; 
     background-color: rgba(33, 150, 243, 0.9);
@@ -170,5 +224,4 @@
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.03em;
-  } 
-  
+  }
