--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -113,8 +113,9 @@
     align-items: center;
     justify-content: space-between;
 
-    @media screen and (min-width: 480px) and (max-width: 767px){
-      display: block;  
+    @media screen and (max-width: 767px){
+      flex-direction: column;
+
     }
      @media screen and (min-width: 768px){
       margin-left: 88px;
