--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -111,7 +111,7 @@
   .site-nav {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    // justify-content: space-between;
 
     @media screen and (max-width: 767px){
       flex-direction: column;
