--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -91,8 +91,13 @@
     top: 50%;
     left: 50%;
   
-    min-height: 581px;
-    min-width: 528px;
+    height: 609px;
+    width: 450px;
+    @media screen and (min-width: 1200px){
+      height: 581px;
+      width: 528px;
+    }
+    
     padding: 40px;
   
     background-color: $additional-color;
@@ -141,9 +146,14 @@
     font-family: $main-font;
     font-weight: 700;
     font-size: 20px;
-    line-height: 23px;
+    line-height: 1.5;
     text-align: center;
     letter-spacing: 0.03em;
+    
+    @media screen and (min-width: 1200px){
+      font-size: 20px;
+      line-height: 1.15;
+    }
   
     color: $main-text-color;
   }
@@ -244,10 +254,15 @@
   
     font-family: $main-font;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
+    font-size: 12px;
+    line-height: 1.16;
     letter-spacing: 0.03em;
-  
+    
+    @media screen and (min-width: 1200px){
+      font-size: 14px;
+      line-height: 1.71;
+    }
+      
     color: $auxiliary-text-color;
   }
   .checkbox__link {
