--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -90,9 +90,14 @@
     position: absolute;
     top: 50%;
     left: 50%;
-  
-    height: 609px;
-    width: 450px;
+    // For my personal device
+    @media screen and (max-width: 479px){
+      width: 350px;;
+    }
+    @media screen and (min-width: 480px){
+      height: 609px;
+      width: 450px;
+    }
     @media screen and (min-width: 1200px){
       height: 581px;
       width: 528px;
