--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,25 +3,95 @@
     display: block;
     text-align: center;
     justify-content: center; 
+    padding-top: 118px;
+    padding-bottom: 118px;
 
     background-color: rgba(47, 48, 58, 0.8);
+    background-size: cover;
     background-image: linear-gradient(
-        to right,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url("../images/hero.jpg");
-    max-width: 1600px;
-    
-    @media screen and (min-width: 480px) {
-      padding-top: 118px;
-      padding-bottom: 118px;
-    }
+         to right, rgba(47, 48, 58, 0.4),
+         rgba(47, 48, 58, 0.4)),
+        url("../images/hero-mobile@1x.jpg");
+
+            @media screen and (min-device-pixel-ratio: 2),
+              screen and (-o-min-device-pixel-ratio: 2/1),
+              screen and (-webkit-min-device-pixel-ratio: 2),
+              screen and (min-resolution: 192dpi),
+              screen and (min-resolution: 2dppx) {
+                background-image: linear-gradient(
+                    to right, rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)),
+                  url("../images/hero-mobile@2x.jpg");
+            }
+            @media screen and (min-device-pixel-ratio: 3),
+              screen and (-o-min-device-pixel-ratio: 3/1),
+              screen and (-webkit-min-device-pixel-ratio: 3),
+              screen and (min-resolution: 288dpi),
+              screen and (min-resolution: 3dppx) {
+                background-image: linear-gradient(
+                    to right,  rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)),
+                  url("../images/hero-mobile@3x.jpg");
+            }
+            
+        @media screen and (min-width: 768px) and (max-width: 1199px) {
+            background-image: linear-gradient(
+                to right, rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)),
+              url("../images/hero-tablet@1x.jpg");
+            
+            @media screen and (min-device-pixel-ratio: 2),
+              screen and (-o-min-device-pixel-ratio: 2/1),
+              screen and (-webkit-min-device-pixel-ratio: 2),
+              screen and (min-resolution: 192dpi),
+              screen and (min-resolution: 2dppx) {
+                background-image: linear-gradient(
+                    to right, rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)),
+                  url("../images/hero-tablet@2x.jpg");
+            }
+            @media screen and (min-device-pixel-ratio: 3),
+              screen and (-o-min-device-pixel-ratio: 3/1),
+              screen and (-webkit-min-device-pixel-ratio: 3),
+              screen and (min-resolution: 288dpi),
+              screen and (min-resolution: 3dppx) {
+                background-image: linear-gradient(
+                    to right, rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)),
+                  url("../images/hero-tablet@3x.jpg");
+            }
+        }
+            
+        @media screen and (min-width: 1200px) {
+          padding-top: 200px;
+          padding-bottom: 200px;
+
+          background-image: linear-gradient(
+              to right, rgba(47, 48, 58, 0.4),
+              rgba(47, 48, 58, 0.4)),
+            url("../images/hero-desktop@1x.jpg");
         
-    @media screen and (min-width: 1200px) {
-      padding-top: 200px;
-      padding-bottom: 200px;
-    }
+            @media screen and (min-device-pixel-ratio: 2),
+              screen and (-o-min-device-pixel-ratio: 2/1),
+              screen and (-webkit-min-device-pixel-ratio: 2),
+              screen and (min-resolution: 192dpi),
+              screen and (min-resolution: 2dppx) {
+                background-image: linear-gradient(
+                    to right, rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)),
+                  url("../images/hero-desktop@2x.jpg");
+            }
+            @media screen and (min-device-pixel-ratio: 3),
+              screen and (-o-min-device-pixel-ratio: 3/1),
+              screen and (-webkit-min-device-pixel-ratio: 3),
+              screen and (min-resolution: 288dpi),
+              screen and (min-resolution: 3dppx) {
+                background-image: linear-gradient(
+                    to right, rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)),
+                  url("../images/hero-desktop@3x.jpg");
+            }
+        }
   }
   .menu-container.is-open .hero{
       display: none;
