--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -41,7 +41,15 @@
     &:last-child {
       margin-right: 0;
     }
-    @media screen and (max-width: 767px) {
+    // For my personal device
+    @media screen and (max-width: 479px) {
+      margin-bottom: 0;
+      
+      &:nth-child(-n+4) {
+        margin-bottom: 15px;
+      }
+    }
+    @media screen and (min-width: 480px) and (max-width: 767px) {
       margin-bottom: 15px;
       
       &:nth-last-child(-n+2) {
