--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -125,7 +125,7 @@
     }
     @media screen and (min-width: 1200px) {
       width: calc((100% - 60px) / 3);
-      margin-bottom: 0;
+      margin-bottom: 30px;
     
       &:nth-child(3n) {
       margin-right: 0px;
