--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -5,7 +5,7 @@
     padding-top: 60px;
     padding-bottom: 60px;
     margin: 0 auto;
-    outline: 1px solid tomato;
+    // outline: 1px solid tomato;
 
     @media screen and (min-width: 480px) {
       width: 480px;
