--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -4,7 +4,8 @@
     padding-right: 15px;
     padding-top: 60px;
     padding-bottom: 60px;
-    margin: 0 auto;
+    margin-right: auto;
+    margin-left: auto;
     // outline: 1px solid tomato;
 
     @media screen and (min-width: 480px) {
