--- a/css/main.css
+++ b/css/main.css
@@ -505,6 +505,7 @@ p {
   padding-top: 10px;
   padding-bottom: 10px;
   z-index: 10;
+  border-bottom: 1px solid #ececec;
 }
 
 @media screen and (max-width: 479px) {
