--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -11,6 +11,7 @@
   padding-top: 10px;
   padding-bottom: 10px;
   z-index: 10;
+  border-bottom: 1px solid rgb(236, 236, 236);  
 
   @media screen and (max-width: 479px) {
     width: 100%;
