--- a/css/main.css
+++ b/css/main.css
@@ -848,7 +848,7 @@ p {
 }
 
 .hero {
-  display: block;
+  max-width: 1600px;
   text-align: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -900,6 +900,7 @@ p {
   .hero {
     padding-top: 200px;
     padding-bottom: 200px;
+    max-width: 100%;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero/hero-desktop@1x.jpg");
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero-desktop@1x.jpg");
   }
