--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,6 +1,6 @@
 //* HERO */
   .hero {
-    display: block;
+    max-width: 1600px;
     text-align: center;
     justify-content: center; 
     padding-top: 118px;
@@ -65,6 +65,7 @@
         @media screen and (min-width: 1200px) {
           padding-top: 200px;
           padding-bottom: 200px;
+          max-width: 100%;
 
           background-image: linear-gradient(
               to right, rgba(47, 48, 58, 0.4),
